--- a/pom.xml
+++ b/pom.xml
@@ -1,41 +1,69 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>biz.infocare</groupId>
-  <artifactId>xero</artifactId>
-  <version>0.0.1</version>
-  <packaging>jar</packaging>
+	<groupId>biz.infocare</groupId>
+	<artifactId>xero</artifactId>
+	<version>0.0.1</version>
+	<packaging>jar</packaging>
 
-  <name>infocareapi</name>
-  <url>http://maven.apache.org</url>
+	<name>infocareapi</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-    	<maven.compiler.target>1.8</maven.compiler.target>
-    	<maven.compiler.source>1.8</maven.compiler.source>
-  </properties>
-
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	</properties>
 
 	<build>
 		<plugins>
+			<!-- DEFINE O PLUGIN MAVEN RESPONSÁVEL POR COMPILAR O PROJETO SUA VERSÃO 
+				E O JDK UTILIZADO -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<!-- DEFINE AS CONFIGURAÇÕES DO MAVEN ASSEMBLER -->
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+
+						<!-- DEFINE QUAL É A CLASSE MAIN DA APLICAÇÃO -->
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>src/main/java</mainClass>
+						</manifest>
+					</archive>
+
+					<!-- ADICIONO AO NOME DO JAR FINAL UM COMPLEMENTO DIZENDO QUE ELE CONTÉM 
+						AS DEPENDÊNCIAS -->
+
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
 				<executions>
 					<execution>
-						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
+
+						<!-- DETERMINO QUE O JAR GERADO INCLUIRÁ AS DEPENDÊNCIAS E ELAS SERÃO 
+							EMPACOTADAS JUNTO COM O PROJETO EM UM ÚNICO JAR -->
+
+						<id>make-my-jar-with-dependencies</id>
+						<phase>package</phase>
 						<goals>
-							<goal>copy-dependencies</goal>
+							<goal>single</goal>
 						</goals>
-						<configuration>
-							<outputDirectory>
-								${project.build.directory}/libs
-							</outputDirectory>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -43,12 +71,13 @@
 	</build>
 
 
+
 	<dependencies>
 
 		<dependency>
-		    <groupId>com.github.xeroapi</groupId>
-		    <artifactId>xero-java</artifactId>
-		    <version>2.3.16</version>
+			<groupId>com.github.xeroapi</groupId>
+			<artifactId>xero-java</artifactId>
+			<version>2.3.16</version>
 		</dependency>
 
 		<dependency>
@@ -56,12 +85,12 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.2.4</version>
 		</dependency>
-		
+
 		<dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-            <version>1.30.2</version>
-        </dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.30.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
@@ -74,25 +103,25 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.jboss.resteasy</groupId>
-		    <artifactId>resteasy-jackson-provider</artifactId>
-		    <version>3.8.0.Final</version>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<version>3.8.0.Final</version>
 		</dependency>
 
 		<dependency>
-		    <groupId>org.jboss.resteasy</groupId>
-		    <artifactId>resteasy-jackson2-provider</artifactId>
-		    <version>3.8.0.Final</version>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson2-provider</artifactId>
+			<version>3.8.0.Final</version>
 		</dependency>
-		
+
 	</dependencies>
 
 </project>
